tests/invalid/simple/SetUnion_CompileFail_1.whiley
void System::main([string] args):
    {int} xs
    real y
    y = 1.0234234
    xs = {1,2,3,4}
    xs = xs ∪ y
    print str(xs)
